--- a/gdpr/gdpr.html
+++ b/gdpr/gdpr.html
@@ -10,6 +10,7 @@
     <title> Personvern </title>
     <link rel="stylesheet" href="../style.css">
     <link rel="stylesheet" href="gdpr.css">
+    <script src="nav.js"></script>
 </head>
 
 <body>
@@ -18,19 +19,21 @@
         <nav>
             <div class="logo">
                 <p>
-                    <i class="fa-brands fa-slack" style="color: #ffffff;"></i><a href="../index/index.html">SoMe</a>
+                    <i class="fa-brands fa-slack" style="color: #ffffff;"></i><a href="index.html">SoMe</a>
                 </p>
             </div>
             <div class="right-sections">
                 <ul>
                     <li><a href="../universiell-utforming/universiell_utforming.html">UNIVERSELL UTFORMING</a></li>
-                    <li><a href="gdpr.html">GDPR</a></li>
+                    <li><a href="../gdpr/gdpr.html">GDPR</a></li>
                     <li><a href="../spill/spill.html">SPILL</a></li>
                     <li><a href="../om-oss/om-oss.html">OM OSS</a></li>
                 </ul>
             </div>
+        <div class="nav-toggle">&#9776;</div> 
         </nav>
     </header>
+
 
     <section id="hero">
         <h1> PERSONVERN </h1>
