--- a/om-oss/om-oss.html
+++ b/om-oss/om-oss.html
@@ -9,6 +9,7 @@
   <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.4.2/css/all.min.css"
     integrity="sha512-z3gLpd7yknf1YoNbCzqRKc4qyor8gaKU1qmn+CShxbuBusANI9QpRohGBreCFkKxLhei6S9CQXFEbbKuqLg0DA=="
     crossorigin="anonymous" referrerpolicy="no-referrer">
+    <script src="nav.js"></script>
 
 
   <title>OM OSS</title>
@@ -18,22 +19,24 @@
 </head>
 
 <body>
-  <header>
-    <nav>
-      <div class="logo">
-        <p>
-          <i class="fa-brands fa-slack" style="color: #ffffff;"></i><a href="../index/index.html">SoMe</a>
-        </p>
-      </div>
-      <div class="right-sections">
-        <ul>
-          <li><a href="../universiell-utforming/universiell_utforming.html">UNIVERSELL UTFORMING</a></li>
-          <li><a href="../gdpr/gdpr.html">GDPR</a></li>
-          <li><a href="../spill/spill.html">SPILL</a></li>
-          <li><a href="../om-oss/om-oss.html">OM OSS</a></li>
-        </ul>
-      </div>
-    </nav>
+  
+    <header>
+      <nav>
+          <div class="logo">
+              <p>
+                  <i class="fa-brands fa-slack" style="color: #ffffff;"></i><a href="index.html">SoMe</a>
+              </p>
+          </div>
+          <div class="right-sections">
+              <ul>
+                  <li><a href="../universiell-utforming/universiell_utforming.html">UNIVERSELL UTFORMING</a></li>
+                  <li><a href="../gdpr/gdpr.html">GDPR</a></li>
+                  <li><a href="../spill/spill.html">SPILL</a></li>
+                  <li><a href="../om-oss/om-oss.html">OM OSS</a></li>
+              </ul>
+          </div>
+      <div class="nav-toggle">&#9776;</div> 
+      </nav>
   </header>
 
   <main>
