--- a/spill/spill.html
+++ b/spill/spill.html
@@ -9,6 +9,7 @@
         crossorigin="anonymous" referrerpolicy="no-referrer">
     <link rel="stylesheet" href="../style.css">
     <link rel="stylesheet" href="spill.css">
+    <script src="nav.js"></script>
     <title>SoMe-prosjekt</title>
 </head>
 
@@ -17,8 +18,7 @@
         <nav>
             <div class="logo">
                 <p>
-
-                    <i class="fa-brands fa-slack" style="color: #ffffff;"></i><a href="../index/index.html">SoMe</a>
+                    <i class="fa-brands fa-slack" style="color: #ffffff;"></i><a href="index.html">SoMe</a>
                 </p>
             </div>
             <div class="right-sections">
@@ -29,8 +29,10 @@
                     <li><a href="../om-oss/om-oss.html">OM OSS</a></li>
                 </ul>
             </div>
+        <div class="nav-toggle">&#9776;</div> 
         </nav>
     </header>
+
 
     <section id="hero">
         <h1> Memory & Flip kort </h1>
