--- a/universiell-utforming/universiell_utforming.html
+++ b/universiell-utforming/universiell_utforming.html
@@ -10,15 +10,15 @@
         integrity="sha512-z3gLpd7yknf1YoNbCzqRKc4qyor8gaKU1qmn+CShxbuBusANI9QpRohGBreCFkKxLhei6S9CQXFEbbKuqLg0DA=="
         crossorigin="anonymous" referrerpolicy="no-referrer">
     <link rel="stylesheet" href="../style.css">
+    <script src="nav.js"></script>
 </head>
 
 <body>
-
     <header>
         <nav>
             <div class="logo">
                 <p>
-                    <i class="fa-brands fa-slack" style="color: #ffffff;"></i><a href="../index/index.html">SoMe</a>
+                    <i class="fa-brands fa-slack" style="color: #ffffff;"></i><a href="index.html">SoMe</a>
                 </p>
             </div>
             <div class="right-sections">
@@ -29,8 +29,10 @@
                     <li><a href="../om-oss/om-oss.html">OM OSS</a></li>
                 </ul>
             </div>
+        <div class="nav-toggle">&#9776;</div> 
         </nav>
     </header>
+
 
     <section id="hero">
         <h1> UNIVERSELL UTFORMING </h1>
