--- a/universiell-utforming/universiell_utforming.html
+++ b/universiell-utforming/universiell_utforming.html
@@ -38,9 +38,16 @@
         <h1> UNIVERSELL UTFORMING </h1>
     </section>
 
+    <section class="lesMer">
+        <button class="scroll-btn"> 
+            Les mer
+            <!--<i class="fa-solid fa-arrow-down"></i>-->
+        </button>
+    </section>
+
     <main class="uu">
         <section>
-            <button onclick="myFunction()">Lys/Mørk</button>
+            <button onclick="myFunction()">Lys / Mørk</button>
             <h2> Hva er universell utforming? </h2>
             <p> «Universell utforming» defineres som «design for alle». Det bygger på tanken om at nettsiden skal være
                 tilgjengelege for alle, uavhengig av alder, funksjonsevne og utdanningsnivå.
