--- a/spill/spill.html
+++ b/spill/spill.html
@@ -9,7 +9,7 @@
         crossorigin="anonymous" referrerpolicy="no-referrer">
     <link rel="stylesheet" href="../style.css">
     <link rel="stylesheet" href="spill.css">
-    <script src="nav.js"></script>
+    <script src="../index/nav.js"></script>
     <title>SoMe-prosjekt</title>
 </head>
 
