--- a/gdpr/gdpr.html
+++ b/gdpr/gdpr.html
@@ -10,7 +10,7 @@
     <title> Personvern </title>
     <link rel="stylesheet" href="../style.css">
     <link rel="stylesheet" href="gdpr.css">
-    <script src="nav.js"></script>
+    <script src="../index/nav.js"></script>
 </head>
 
 <body>
