--- a/universiell-utforming/universiell_utforming.html
+++ b/universiell-utforming/universiell_utforming.html
@@ -10,7 +10,7 @@
         integrity="sha512-z3gLpd7yknf1YoNbCzqRKc4qyor8gaKU1qmn+CShxbuBusANI9QpRohGBreCFkKxLhei6S9CQXFEbbKuqLg0DA=="
         crossorigin="anonymous" referrerpolicy="no-referrer">
     <link rel="stylesheet" href="../style.css">
-    <script src="nav.js"></script>
+    <script src="../index/nav.js"></script>
 </head>
 
 <body>
