--- a/om-oss/om-oss.html
+++ b/om-oss/om-oss.html
@@ -70,22 +70,21 @@
           utforming i utviklingen av sosiale medier og digitalt innhold. </p> <br>
         <p> Vi holder også deg oppdatert på ulike fenomener på sosiale medier, slik som "ghosting" og "reading", slik at
           du kan være oppdatert på det siste innen digital kultur. Til slutt, for litt moro, kan du utforske spillseksjonen vår som tar deg gjennom en interaktiv opplevelse av SoMe-verdenen. Takk for at du besøker SoMe. Vi håper du finner vår nettside informativ, engasjerende og underholdende!
-        </p>
+        </p> <br>
 
-        <br>
-
-        <h2>Kilder vi har tatt i bruk: </h2> <br>
-        <a href="//www.unicef.no/skole/undervisning/folkehelse/nettvett"> www.unicef.no/nettvett </a> <br>
-       <a href="https://brukhue.no/">  </a> <br>
-        <a href="//www.reddbarna.no/vart-arbeid/barn-i-norge/mobbing/mobbing-pa-nett-og-mobil/"> Fiks </a> <br>
-        <a href="//www.telenor.no/privat/artikler/nettslett/saa-mange-opplever-nettmobbing/"> Fiks </a> <br>
-        <a href=" https://lovdata.no/dokument/NL/lov/2005-05-20-28/KAPITTEL_2-9#%C2%A7266"> Lovdata </a> <br>
-        </p>
-
+        <div id="kilder">
+          <h2> Kilder vi har tatt i bruk: </h2> <br>
+          <a href="//www.unicef.no/skole/undervisning/folkehelse/nettvett"> www.unicef.no/nettvett </a> <br>
+         <a href="https://brukhue.no/">  </a> <br>
+          <a href="//www.reddbarna.no/vart-arbeid/barn-i-norge/mobbing/mobbing-pa-nett-og-mobil/"> Fiks </a> <br>
+          <a href="//www.telenor.no/privat/artikler/nettslett/saa-mange-opplever-nettmobbing/"> Fiks </a> <br>
+          <a href=" https://lovdata.no/dokument/NL/lov/2005-05-20-28/KAPITTEL_2-9#%C2%A7266"> Lovdata </a> <br>
+          </p>
+        </div>
       </div>
 
-
     </section>
+
   </main>
 
   <script>
