fikset footer margin

--- a/index/index.html
+++ b/index/index.html
@@ -195,7 +195,7 @@
 
     <footer>
         <div id="footer">
-            <div>
+            <div class="om-oss">
                 <h4>Om oss</h4>
                 <p>SoMe er her for å øke bevisstheten rundt nett-mobbing, fremme personvern-regler, og opplyse om
                     universell utforming. Hold deg oppdatert på de siste sosiale medier fenomenene og nyt vårt
