fikset små ting, formulering

--- a/gdpr/gdpr.html
+++ b/gdpr/gdpr.html
@@ -30,7 +30,7 @@
                     <li><a href="../om-oss/om-oss.html">OM OSS</a></li>
                 </ul>
             </div>
-        <div class="nav-toggle">&#9776;</div> 
+            <div class="nav-toggle">&#9776;</div>
         </nav>
     </header>
 
@@ -43,7 +43,10 @@
         <h2> GDPR </h2>
         <p id="definition"> GDPR er forkortelsen for General Data Protection Regulation, de spesifikke personvernlovene
             for individuelle
-            borgere i EU og Det europeiske økonomiske samarbeidsområdet (EØS).</p>
+            borgere i EU og Det europeiske økonomiske samarbeidsområdet (EØS).</p> <br>
+
+        <p> Hover over ikonene nedenfor for å se noen av kravene som stilles under GDPR, noen rettigheter EU borgere får
+            på grunn av GDPR, og også for å lære litt om hva organisasjoner som bryter med GDPR risikerer. </p>
 
         <section id="GDPR">
             <div id="GDPR_sirkel">
@@ -64,73 +67,71 @@
             </div>
             <div id="gdpr_tekstboks">
                 <div class="hidden_box" id="icon_box_1">
-                    <h2>Bøter av inntil 4% av omsetningen</h2>
+                    <h2> Bøter av inntil 4% av omsetningen </h2>
                     <div class="box_grid">
-                        <p>Organisasjoner som bryter med GDPR kan bli bøtelagt med opptil 4 % av den årlige globale
-                            omsetningen eller 20 millioner euro</p>
+                        <p> Organisasjoner som bryter med GDPR kan bli bøtelagt med opptil 4 % av den årlige globale
+                            omsetningen (eller 20 millioner euro) </p>
                         <i class="fa-solid fa-lock"></i>
                     </div>
                 </div>
 
                 <div class="hidden_box" id="icon_box_2">
-                    <h2>Økt territoriell omfang</h2>
+                    <h2> Økt territoriell omfang </h2>
                     <div class="box_grid">
-                        <p>Gjelder for ethvert selskap som behandler personopplysninger om EU-borgere, uavhengig av
-                            steder
+                        <p> GDPR gjelder for ethvert selskap som behandler personopplysninger om EU-borgere, uavhengig
+                            av sted
                         </p>
                         <i class="fa-solid fa-globe"></i>
                     </div>
                 </div>
 
                 <div class="hidden_box" id="icon_box_3">
-                    <h2>Samtykke er viktig!</h2>
+                    <h2> Samtykke er viktig! </h2>
                     <div class="box_grid">
-                        <p>Eksplisitt samtykke må gis i en forståelig og lett tilgjengelig form</p>
+                        <p> Eksplisitt samtykke må gis i en forståelig og lett tilgjengelig form </p>
                         <i class="fa-solid fa-user-check"></i>
                     </div>
                 </div>
 
                 <div class="hidden_box" id="icon_box_4">
-                    <h2>Rett til tilgang og portabilitet</h2>
+                    <h2> Rett til tilgang og portabilitet </h2>
                     <div class="box_grid">
-                        <p>Brukere kan spørre om og hvordan deres personopplysninger blir behandlet</p>
+                        <p> Brukere har rett til å spørre både om og hvordan deres personopplysninger blir behandlet </p>
                         <i class="fa-solid fa-lock"></i>
                     </div>
                 </div>
 
                 <div class="hidden_box" id="icon_box_5">
-                    <h2>Bruddvarsel innen 72 timer</h2>
+                    <h2> Bruddvarsel innen 72 timer</h2>
                     <div class="box_grid">
-                        <p>Brudd må rapporteres innen 72 timer etter at de først ble kjent med bruddet</p>
+                        <p> Brudd på GDPR må rapporteres innen 72 timer etter at de først ble kjent med bruddet </p>
                         <i class="fa-solid fa-stopwatch"></i>
                     </div>
                 </div>
 
                 <div class="hidden_box" id="icon_box_6">
-                    <h2>Personvern ved design</h2>
+                    <h2> Personvern ved design </h2>
                     <div class="box_grid">
-                        <p>Databeskyttelse fra begynnelsen av utformingen av systemene, snarere enn en retrospektiv
-                            tillegg
-                        </p>
+                        <p> Databeskyttelse fra begynnelsen av utformingen av et design, fremfor retrospektivt
+                            tillegg </p>
                         <i class="fa-solid fa-lock"></i>
                     </div>
                 </div>
 
                 <div class="hidden_box" id="icon_box_7">
-                    <h2>Rett til å bli glemt</h2>
+                    <h2> Rett til å bli glemt </h2>
                     <div class="box_grid">
-                        <p>Gir den registrerte rett til å få behandlingsansvarlig til å slette hans/hennes
-                            personopplysninger
-                            (og potensielt også tredjeparter)</p>
+                        <p> GDPR gir enkelt-mennesker rett til å få behandlingsansvarlig til å slette hans/hennes
+                            personopplysninger </p>
                         <i class="fa-solid fa-key"></i>
                     </div>
                 </div>
 
                 <div class="hidden_box" id="icon_box_8">
-                    <h2>Obligatoriske databeskyttelsesansvarlige</h2>
+                    <h2> Obligatoriske databeskyttelsesansvarlige </h2>
                     <div class="box_grid">
-                        <p>Oppnevnt i visse tilfeller, for å legge til rette for at selskapene trenger å demonstrere
-                            GDPR-samsvar</p>
+                        <p> Databeskytteransvarlige blir oppnevnt i visse tilfeller, for å passe på at selskapene samsvarer med 
+                            GDPR </p>
                         <i class="fa-solid fa-user-lock"></i>
                     </div>
                 </div>
@@ -139,7 +140,7 @@
 
         <br>
         <section id="personvern">
-            <h2>Personopplysningsloven </h2>
+            <h2>Personopplysnings-loven </h2>
             <br>
             <p> Personopplysningsloven handler om behandling – altså innsamling og bruk – av personopplysninger. Reglene
                 gir virksomhetene en rekke plikter samtidig som den gir enkeltpersoner, ofte kalt registrerte, en rekke
@@ -187,7 +188,8 @@
                 begrensninger i frykt for at myndighetene vil registrere og lagre informasjon om din kommunikasjon med
                 andre, dine bevegelser, interesser og uttrykk.</p> <br>
             <p> Alle har et krav på å få vite akkurat hvilke opplysninger som blir lagret om vedkommende. Noen av
-                kravene som stilles med GDPR kan sees <a class="videreføring" href="#GDPR"> her. </a></p>
+                kravene som stilles under Genral Data Rule Protection kan sees <a class="videreføring" href="#GDPR">
+                    her. </a></p>
             <br>
             <p> Eller du kan lese mer om GDPR og personvern på <a class="videreføring"
                     href="https://lovdata.no/dokument/NL/lov/2018-06-15-38/KAPITTEL_gdpr#KAPITTEL_gdpr"> lovdata.no </a>
