--- a/om-oss/om-oss.html
+++ b/om-oss/om-oss.html
@@ -74,11 +74,11 @@
 
         <div id="kilder">
           <h2> Kilder vi har tatt i bruk: </h2> <br>
-          <a href="//www.unicef.no/skole/undervisning/folkehelse/nettvett"> www.unicef.no/nettvett </a> <br>
-         <a href="https://brukhue.no/">  </a> <br>
-          <a href="//www.reddbarna.no/vart-arbeid/barn-i-norge/mobbing/mobbing-pa-nett-og-mobil/"> Fiks </a> <br>
-          <a href="//www.telenor.no/privat/artikler/nettslett/saa-mange-opplever-nettmobbing/"> Fiks </a> <br>
-          <a href=" https://lovdata.no/dokument/NL/lov/2005-05-20-28/KAPITTEL_2-9#%C2%A7266"> Lovdata </a> <br>
+          <a href="https://www.unicef.no/skole/undervisning/folkehelse/nettvett"> https://www.unicef.no/skole/undervisning/folkehelse/nettvett</a> <br>
+         <a href="https://brukhue.no/"> https://brukhue.no/ </a> <br>
+          <a href="https://www.reddbarna.no/vart-arbeid/barn-i-norge/mobbing/"> https://www.reddbarna.no/vart-arbeid/barn-i-norge/mobbing/</a> <br>
+          <a href="https://www.telenor.no/privat/artikler/nettslett/saa-mange-opplever-nettmobbing/"> https://www.telenor.no/privat/artikler/nettslett/saa-mange-opplever-nettmobbing/ </a> <br>
+          <a href=" https://lovdata.no/dokument/NL/lov/2005-05-20-28/KAPITTEL_2-9#%C2%A7266"> https://lovdata.no/dokument/NL/lov/2005-05-20-28/KAPITTEL_2-9#%C2%A7266 </a> <br>
           </p>
         </div>
       </div>
