--- a/om-oss/om-oss.html
+++ b/om-oss/om-oss.html
@@ -49,9 +49,9 @@
 
       <h2> Velkommen til SoMe - din kilde til å utforske og forstå sosiale medier!</h2> <br>
       <p> Vi er et dedikert team av IT1 elever, og vår lidenskap er å øke bevisstheten rundt ulike aspekter ved
-        sosiale medier. 
+        sosiale medier.
         Gjennom vår nettside ønsker vi å bidra til å minimere nettmobbing ved å spre kunnskap og oppmerksomhet rundt
-        dette alvorlige problemet. 
+        dette alvorlige problemet.
         Vi tror på å skape et trygt og inkluderende digitalt miljø for alle.
       </p>
 
@@ -69,17 +69,36 @@
           alle, uavhengig av fysiske eller kognitive evner. Derfor oppfordrer vi til å ta hensyn til universell
           utforming i utviklingen av sosiale medier og digitalt innhold. </p> <br>
         <p> Vi holder også deg oppdatert på ulike fenomener på sosiale medier, slik som "ghosting" og "reading", slik at
-          du kan være oppdatert på det siste innen digital kultur. Til slutt, for litt moro, kan du utforske spillseksjonen vår som tar deg gjennom en interaktiv opplevelse av SoMe-verdenen. Takk for at du besøker SoMe. Vi håper du finner vår nettside informativ, engasjerende og underholdende!
+          du kan være oppdatert på det siste innen digital kultur. Til slutt, for litt moro, kan du utforske
+          spillseksjonen vår som tar deg gjennom en interaktiv opplevelse av SoMe-verdenen. Takk for at du besøker SoMe.
+          Vi håper du finner vår nettside informativ, engasjerende og underholdende!
         </p> <br>
 
         <div id="kilder">
           <h2> Kilder vi har tatt i bruk: </h2> <br>
-          <a href="https://www.unicef.no/skole/undervisning/folkehelse/nettvett">  https://www.unicef.no/skole/undervisning/folkehelse/nettvett</a> <br>
-         <a href="https://brukhue.no/"> https://brukhue.no/ </a> <br>
-          <a href="https://www.reddbarna.no/vart-arbeid/barn-i-norge/mobbing/"> https://www.reddbarna.no/vart-arbeid/barn-i-norge/mobbing/</a> <br>
-          <a href="https://www.telenor.no/privat/artikler/nettslett/saa-mange-opplever-nettmobbing/"> https://www.telenor.no/privat/artikler/nettslett/saa-mange-opplever-nettmobbing/ </a> <br>
-          <a href=" https://lovdata.no/dokument/NL/lov/2005-05-20-28/KAPITTEL_2-9#%C2%A7266"> https://lovdata.no/dokument/NL/lov/2005-05-20-28/KAPITTEL_2-9#%C2%A7266 </a> <br>
-          </p>
+          <a href="https://www.unicef.no/skole/undervisning/folkehelse/nettvett">
+            https://www.unicef.no/skole/undervisning/folkehelse/nettvett</a> <br>
+          <a href="https://brukhue.no/"> https://brukhue.no/ </a> <br>
+          <a href="https://www.reddbarna.no/vart-arbeid/barn-i-norge/mobbing/">
+            https://www.reddbarna.no/vart-arbeid/barn-i-norge/mobbing/</a> <br>
+          <a href="https://www.telenor.no/privat/artikler/nettslett/saa-mange-opplever-nettmobbing/">
+            https://www.telenor.no/privat/artikler/nettslett/saa-mange-opplever-nettmobbing/ </a> <br>
+          <a href=" https://lovdata.no/dokument/NL/lov/2005-05-20-28/KAPITTEL_2-9#%C2%A7266">
+            //lovdata.no/dokument/NL/lov/2005-05-20-28/KAPITTEL_2-9#%C2%A7266 </a> <br>
+          <a href="https://www.datatilsynet.no/rettigheter-og-plikter/hva-er-personvern/">
+            https://www.datatilsynet.no/rettigheter-og-plikter/hva-er-personvern/</a> <br>
+          <a href="https://lovdata.no/dokument/NL/lov/2018-06-15-38/KAPITTEL_gdpr#KAPITTEL_gdpr">
+            https://lovdata.no/dokument/NL/lov/2018-06-15-38/KAPITTEL_gdpr#KAPITTEL_gdpr</a> <br>
+          <a href="https://www.emotiv.com/blogs/glossary/gdpr https://"> https://www.emotiv.com/blogs/glossary/gdpr
+            https://</a> <br>
+          <a href="www.datatilsynet.no/personvern-pa-ulike-omrader/internett-og-apper/cookies/">
+            www.datatilsynet.no/personvern-pa-ulike-omrader/internett-og-apper/cookies/</a> <br>
+          <a href="https://blinkmarked.no/universell-utforming/"> https://blinkmarked.no/universell-utforming/</a> <br>
+          <a
+            href="https://www.kom24.no/jennifer-fossnes-meninger-universell-utforming/sjekkliste-er-nettsidene-dine-universelt-tilpasset/574656">
+            https://www.kom24.no/jennifer-fossnes-meninger-universell-utforming/sjekkliste-er-nettsidene-dine-universelt-tilpasset/574656</a>
+          <br>
+          <p>
         </div>
       </div>
 
