--- a/om-oss/om-oss.html
+++ b/om-oss/om-oss.html
@@ -76,8 +76,8 @@
 
         <div id="kilder">
           <h2> Kilder vi har tatt i bruk: </h2> <br>
-          <a href="https://www.unicef.no/skole/undervisning/folkehelse/nettvett">
-            https://www.unicef.no/skole/undervisning/folkehelse/nettvett</a> <br>
+          <a href="https://www.unicef.no/skole/undervisning/folkehelse/nettvett">https://www.unicef.no/skole/undervisning/folkehelse/nettvett
+            </a> <br>
           <a href="https://brukhue.no/"> https://brukhue.no/ </a> <br>
           <a href="https://www.reddbarna.no/vart-arbeid/barn-i-norge/mobbing/">
             https://www.reddbarna.no/vart-arbeid/barn-i-norge/mobbing/</a> <br>
