--- a/index/index.html
+++ b/index/index.html
@@ -36,7 +36,7 @@
         </nav>
     </header>
 
-    <h1>SoME - Sosiale medier</h1>
+    <h1>SoMe - SOSIALE MEDIER</h1>
     <section id="slideshow_m_historier">
         <div class="slideshow_container">
             <div class="tilbake_knapp"><i class="fas fa-chevron-left"></i></div>
