--- a/universiell-utforming/universiell_utforming.html
+++ b/universiell-utforming/universiell_utforming.html
@@ -47,7 +47,7 @@
 
     <main class="uu">
         <section>
-            <button onclick="myFunction()">Lys / Mørk</button>
+            <button id="LysMork" onclick="myFunction()">Lys / Mørk</button>
             <h2> Hva er universell utforming? </h2>
             <p> «Universell utforming» defineres som «design for alle». Det bygger på tanken om at nettsiden skal være
                 tilgjengelege for alle, uavhengig av alder, funksjonsevne og utdanningsnivå.
