forsøk på å rydde opp i responsivness

--- a/gdpr/gdpr.html
+++ b/gdpr/gdpr.html
@@ -41,6 +41,7 @@
     </section>
 
     <main>
+        <div class="GDPR-intro">
         <h2> GDPR </h2>
         <p id="definition"> GDPR er forkortelsen for General Data Protection Regulation, de spesifikke personvernlovene
             for individuelle
@@ -48,6 +49,7 @@
 
         <p> Hover over ikonene nedenfor for å se noen av kravene som stilles under GDPR, noen rettigheter EU borgere får
             på grunn av GDPR, og også for å lære litt om hva organisasjoner som bryter med GDPR risikerer. </p>
+        </div>
 
         <section id="GDPR">
             <div id="GDPR_sirkel">
