--- a/om-oss/om-oss.html
+++ b/om-oss/om-oss.html
@@ -73,28 +73,60 @@
 
         <div id="kilder">
           <h2> Kilder vi har tatt i bruk: </h2> <br>
-          <a href="https://www.unicef.no/skole/undervisning/folkehelse/nettvett">https://www.unicef.no/skole/undervisning/folkehelse/nettvett
-            </a> <br>
-          <a href="https://brukhue.no/"> https://brukhue.no/ </a> <br>
-          <a href="https://www.reddbarna.no/vart-arbeid/barn-i-norge/mobbing/">
-            https://www.reddbarna.no/vart-arbeid/barn-i-norge/mobbing/</a> <br>
+
+          <p> UNICEF Norge (u.å.). Nettvett. Hentet fra 
+            <a href="https://www.unicef.no/skole/undervisning/folkehelse/nettvett">
+              https://www.unicef.no/skole/undervisning/folkehelse/nettvett</a>
+          </p> <br>
+
+          <p> Bruk hue. (2024). Bli med i kampen mot nettmobbing. Hentet fra 
+            <a href="https://brukhue.no/">https://brukhue.no/ </a> 
+          </p> <br>
+
+          <p> Redd Barna. (u.å.). Mobbing. Hentet fra 
+            <a href="https://www.reddbarna.no/vart-arbeid/barn-i-norge/mobbing/">
+              https://www.reddbarna.no/vart-arbeid/barn-i-norge/mobbing/</a>
+          </p> <br>
+
+          <p> Telenor. (2019). Så mange opplever nettmobbing. Hentet fra
           <a href="https://www.telenor.no/privat/artikler/nettslett/saa-mange-opplever-nettmobbing/">
-            https://www.telenor.no/privat/artikler/nettslett/saa-mange-opplever-nettmobbing/ </a> <br>
+            https://www.telenor.no/privat/artikler/nettslett/saa-mange-opplever-nettmobbing/ </a>
+          </p> <br>
+
+          <p> Lovdata. (2005). Lov om behandling av personopplysninger (personopplysningsloven). Hentet fra
           <a href=" https://lovdata.no/dokument/NL/lov/2005-05-20-28/KAPITTEL_2-9#%C2%A7266">
-            //lovdata.no/dokument/NL/lov/2005-05-20-28/KAPITTEL_2-9#%C2%A7266 </a> <br>
+            //lovdata.no/dokument/NL/lov/2005-05-20-28/KAPITTEL_2-9#%C2%A7266 </a>
+          </p> <br>
+
+          <p> Datatilsynet. (u.å.). Hva er personvern? Hentet fra
           <a href="https://www.datatilsynet.no/rettigheter-og-plikter/hva-er-personvern/">
-            https://www.datatilsynet.no/rettigheter-og-plikter/hva-er-personvern/</a> <br>
+            https://www.datatilsynet.no/rettigheter-og-plikter/hva-er-personvern/</a>
+          </p> <br>
+
+          <p> Lovdata. (2018). Personvernforordningen (GDPR). Hentet fra
           <a href="https://lovdata.no/dokument/NL/lov/2018-06-15-38/KAPITTEL_gdpr#KAPITTEL_gdpr">
-            https://lovdata.no/dokument/NL/lov/2018-06-15-38/KAPITTEL_gdpr#KAPITTEL_gdpr</a> <br>
+            https://lovdata.no/dokument/NL/lov/2018-06-15-38/KAPITTEL_gdpr#KAPITTEL_gdpr</a>
+          </p> <br>
+
+          <p> Emotiv. (2024). GDPR. Hentet fra
           <a href="https://www.emotiv.com/blogs/glossary/gdpr https://"> https://www.emotiv.com/blogs/glossary/gdpr
-            https://</a> <br>
+            https://</a>
+          </p> <br>
+
+          <p> Datatilsynet. (2018). Informasjonskapsler (cookies). Hentet fra
           <a href="www.datatilsynet.no/personvern-pa-ulike-omrader/internett-og-apper/cookies/">
-            www.datatilsynet.no/personvern-pa-ulike-omrader/internett-og-apper/cookies/</a> <br>
-          <a href="https://blinkmarked.no/universell-utforming/"> https://blinkmarked.no/universell-utforming/</a> <br>
-          <a
-            href="https://www.kom24.no/jennifer-fossnes-meninger-universell-utforming/sjekkliste-er-nettsidene-dine-universelt-tilpasset/574656">
+            www.datatilsynet.no/personvern-pa-ulike-omrader/internett-og-apper/cookies/</a>
+          </p> <br>
+
+          <p> Blinkmarked. (2020). Universell utforming. Hentet fra
+          <a href="https://blinkmarked.no/universell-utforming/"> https://blinkmarked.no/universell-utforming/</a>
+        </p> <br>
+
+        <p> Fossnes, J. (2023). Sjekkliste: Er nettsidene dine universelt tilpasset? Hentet fra 
+          <a href="https://www.kom24.no/jennifer-fossnes-meninger-universell-utforming/sjekkliste-er-nettsidene-dine-universelt-tilpasset/574656">
             https://www.kom24.no/jennifer-fossnes-meninger-universell-utforming/sjekkliste-er-nettsidene-dine-universelt-tilpasset/574656</a>
-          <br>
+          </p> <br>
+
           <p>
         </div>
       </div>
