format dokument og endret fil navn

--- a/gdpr/gdpr.html
+++ b/gdpr/gdpr.html
@@ -11,7 +11,7 @@
     <link rel="stylesheet" href="../style.css">
     <link rel="stylesheet" href="gdpr.css">
     <script src="../index/nav.js"></script>
-    
+
 </head>
 
 <body>
@@ -42,13 +42,15 @@
 
     <main>
         <div class="GDPR-intro">
-        <h2> GDPR </h2>
-        <p id="definition"> GDPR er forkortelsen for General Data Protection Regulation, de spesifikke personvernlovene
-            for individuelle
-            borgere i EU og Det europeiske økonomiske samarbeidsområdet (EØS).</p> <br>
+            <h2> GDPR </h2>
+            <p id="definition"> GDPR er forkortelsen for General Data Protection Regulation, de spesifikke
+                personvernlovene
+                for individuelle
+                borgere i EU og Det europeiske økonomiske samarbeidsområdet (EØS).</p> <br>
 
-        <p> Hover over ikonene nedenfor for å se noen av kravene som stilles under GDPR, noen rettigheter EU borgere får
-            på grunn av GDPR, og også for å lære litt om hva organisasjoner som bryter med GDPR risikerer. </p>
+            <p> Hover over ikonene nedenfor for å se noen av kravene som stilles under GDPR, noen rettigheter EU borgere
+                får
+                på grunn av GDPR, og også for å lære litt om hva organisasjoner som bryter med GDPR risikerer. </p>
         </div>
 
         <section id="GDPR">
@@ -99,7 +101,8 @@
                 <div class="hidden_box" id="icon_box_4">
                     <h2> Rett til tilgang og portabilitet </h2>
                     <div class="box_grid">
-                        <p> Brukere har rett til å spørre både om og hvordan deres personopplysninger blir behandlet </p>
+                        <p> Brukere har rett til å spørre både om og hvordan deres personopplysninger blir behandlet
+                        </p>
                         <i class="fa-solid fa-lock"></i>
                     </div>
                 </div>
@@ -133,7 +136,8 @@
                 <div class="hidden_box" id="icon_box_8">
                     <h2> Obligatoriske databeskyttelsesansvarlige </h2>
                     <div class="box_grid">
-                        <p> Databeskytteransvarlige blir oppnevnt i visse tilfeller, for å passe på at selskapene samsvarer med 
+                        <p> Databeskytteransvarlige blir oppnevnt i visse tilfeller, for å passe på at selskapene
+                            samsvarer med
                             GDPR </p>
                         <i class="fa-solid fa-user-lock"></i>
                     </div>
